fix horizontal scrolling arrow appearance

--- a/src/global.css
+++ b/src/global.css
@@ -89,3 +89,7 @@
   width: 275px;
   white-space: normal !important;
 }
+
+.scroll-menu-arrow--disabled {
+  display: none;
+}
